--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MuthukumaranGithub</title>
+  <title>Muthukumaran</title>
+  <meta name="description" content="Muthukumaran is a enthusiastic full stack developer.  He is quiet good in Web technologies and PHP/Laravel/Angular. He is a web developer with a creative technology mind and have the lust to explore the depth of web ">
+  <meta name="keywords" content="Muthukumaran,Muthukumaran Muthiah, Mukun, Creator of Mechu, Full stack web developer, Mukundcreator">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
